--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wmt-marketplace-auth",
+  "name": "wmt-marketplace-auth-canada",
   "version": "1.1.0",
   "description": "Generate the authentication headers required by Walmart Marketplace API.",
   "main": "index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/makanaleu/wmt-marketplace-auth.git"
+    "url": "https://github.com/makanaleu/wmt-marketplace-auth-canada.git"
   },
   "keywords": [
     "Walmart",
@@ -28,9 +28,9 @@
   "author": "Kane McConnell <kane@makanal.eu>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/makanaleu/wmt-marketplace-auth/issues"
+    "url": "https://github.com/makanaleu/wmt-marketplace-auth-canada/issues"
   },
-  "homepage": "https://github.com/makanaleu/wmt-marketplace-auth#readme",
+  "homepage": "https://github.com/makanaleu/wmt-marketplace-auth-canada#readme",
   "devDependencies": {
     "ts-node": "5.0.1",
     "typescript": "2.8.1",
